examples/test/testpolicy4.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4
  namespace: namespace356
spec:
  podSelector:
    matchLabels:
      key0: value2
      key7: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value33
          key32: value1
      podSelector:
        matchLabels:
          key0: value28
